# openapi.json
@@ -90,7 +90,8 @@
         "type": "object",
         "properties": {
           "data": {
-            "type": "null"
+            "type": "string",
+            "nullable": true
           },
           "success": {
             "type": "boolean",
@@ -1565,7 +1566,8 @@
                   "type": "object",
                   "properties": {
                     "data": {
-                      "type": null
+                      "type": "string",
+                      "nullable": true
                     },
                     "success": {
                       "type": "boolean",
@@ -1731,7 +1733,8 @@
                   "type": "object",
                   "properties": {
                     "data": {
-                      "type": null
+                      "type": "string",
+                      "nullable": true
                     },
                     "success": {
                       "type": "boolean",
@@ -2205,7 +2208,27 @@
                       }
                     },
                     "pagination": {
-                      "$ref": "#/components/schemas/Pagination"
+                      "type": "object",
+                      "properties": {
+                        "page": {
+                          "type": "integer"
+                        },
+                        "limit": {
+                          "type": "integer"
+                        },
+                        "total": {
+                          "type": "integer"
+                        },
+                        "totalPages": {
+                          "type": "integer"
+                        },
+                        "hasNext": {
+                          "type": "boolean"
+                        },
+                        "hasPrev": {
+                          "type": "boolean"
+                        }
+                      }
                     },
                     "success": {
                       "type": "boolean"
